--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   firebase_auth: ^5.3.4
+  http: ^1.2.0
+  path: ^1.8.3
   firebase_core: ^3.9.0
   cloud_firestore:
   record: ^6.1.2
